fixed task show display (item misalignment) and added calendar js controller function to toggle targeted day background color

--- a/app/assets/stylesheets/components/_reward.scss
+++ b/app/assets/stylesheets/components/_reward.scss
@@ -1,9 +1,8 @@
 .card_generic {
   padding: 80px 60px;
-  background: rgba(250,250,250,0.5);
+  background: rgba(250, 250, 250, 0.5);
   border-radius: 4px;
 }
-
 
 .emoji_reward {
   font-size: 50px;
@@ -36,7 +35,7 @@
 }
 
 .reward-card {
-  background: rgba(250,250,250,0.5);
+  background: rgba(250, 250, 250, 0.5);
   border-radius: 4px;
   width: 95%;
   margin: auto;
@@ -75,7 +74,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.sentence-card{
+.sentence-card {
   border: 1px solid #ccc;
   border-radius: 8px;
   margin: 10px;
@@ -111,7 +110,8 @@
   border-radius: 10px;
 }
 
-.swiper-btn-next, .swiper-btn-prev {
+.swiper-btn-next,
+.swiper-btn-prev {
   width: 50px;
   height: 50px;
   background-color: rgba(255, 255, 255, 0.8);
@@ -128,7 +128,6 @@
 
 .swiper-wrapper {
   background-size: cover;
-
 }
 
 .swiper-pagination-bullet {
@@ -140,7 +139,6 @@
 }
 
 .swiper-container {
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -148,7 +146,7 @@
 }
 
 .swiper {
-  .btn{
+  .btn {
     position: absolute;
     bottom: 10%; /* Adjust the bottom margin as needed */
     left: 50%;
